--- a/app/src/main/res/drawable/shape_item.xml
+++ b/app/src/main/res/drawable/shape_item.xml
@@ -2,14 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
        android:shape="rectangle">
 
-    <gradient
-        android:centerColor="#DCDCDC"
-        android:endColor="#DCDCDC"
-        android:startColor="#DCDCDC"
-        android:type="linear"/>
-
+    <solid android:color="#fff000"/>
     <size
-        android:width="4dp"
-        android:height="4dp"/>
+        android:width="6dp"
+        android:height="6dp"/>
 
 </shape>
