--- a/app/src/main/res/layout/item_song_horizontal.xml
+++ b/app/src/main/res/layout/item_song_horizontal.xml
@@ -6,10 +6,11 @@
 
     <TextView
         android:id="@+id/tv_song_name"
-        android:layout_width="70dp"
+        android:layout_width="100dp"
         android:layout_height="match_parent"
         android:background="@color/colorItemBg"
         android:gravity="center"
+        android:padding="10dp"
         android:text="the song"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="16sp"
