--- a/app/src/main/res/layout/item_song_vertical.xml
+++ b/app/src/main/res/layout/item_song_vertical.xml
@@ -9,7 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:background="@color/colorItemBg"
-        android:gravity="center"
+        android:gravity="left|center"
+        android:paddingLeft="10dp"
         android:text="the song"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="16sp"
