--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -65,4 +65,13 @@
         app:layout_constraintLeft_toRightOf="@id/fab_add"
         app:srcCompat="@android:drawable/ic_menu_delete"/>
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab_refresh"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/fab_margin"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toRightOf="@id/fab_remove"
+        app:srcCompat="@android:drawable/ic_menu_view"/>
+
 </android.support.constraint.ConstraintLayout>
